--- a/css/style.css
+++ b/css/style.css
@@ -16,14 +16,16 @@ h2{
   
 }
 
-#wrapper{
+#tardis{
 
+  width: 440px;
+  height: 800px;
 
 }
 
 #roofTop{
   position:relative;
-  top:78px;
+  top:50px;
   left:-16px;
   
 }
@@ -34,9 +36,9 @@ h2{
   border-style:  solid;
   border-color:#1066a8;
   display:block;
-   position:relative;
-  top:122px;
-  left:283px;
+  position:relative;
+  top:-30px;
+  left:287px;
   height:5px;
   width:27px;
   border-radius:4px 4px 0 0;
@@ -49,8 +51,8 @@ h2{
   border-color:#1066a8;
   display:block;
   position:relative;
-  top:122px;
-  left:282px;
+  top:-30px;
+  left:286px;
   height:8px;
   width:30px;
   padding-left:5px;
@@ -60,8 +62,8 @@ h2{
   background-color:white;
   display:block;
   position:relative;
-  top:120px;
-  left:284px;
+  top:-30px;
+  left:288px;
   border: 3px solid #145788;
   height:25px;
   width:25px;
@@ -75,8 +77,8 @@ h2{
   height:15px;
   width:30px;
   position:relative;
-  top:120px;
-  left:282px;
+  top:-30px;
+  left:285px;
   Z-index:10;
 }
 
@@ -88,8 +90,8 @@ h2{
 	height: 0;
 	width:0;
   position:relative;
-  top:108px;
-  left:130px;
+  top:10px;
+  left:118px;
  
 }
 .roofUnSlant {
@@ -99,7 +101,7 @@ h2{
   height:15px;
   width:328px;
   position:relative;
-  top:185px;
+  top:10px;
   left:115px;
   z-index:-1;
 }
@@ -108,7 +110,7 @@ h2{
  border-style:  outset;
  border-color:#1066a8;
  border-radius:5px 0 0 5px;
- height:55px; 
+ height:53px; 
  width:15px;
  margin:23px 0px 0px -20px;
  Z-index:45; 
@@ -119,11 +121,11 @@ h2{
   background-color: #0c4f83;
   border: 1px solid #1066a8;
   height:100px;
-  width: 298px;
+  width: 332px;
   margin: 20px 0 0 0;
   position:relative;
-  top:150px;
-  left:130px;
+  top:-25px;
+  left:115px;
   z-index:-2;
   
 }
@@ -133,9 +135,9 @@ h2{
  border-style:  outset;
  border-color:#1066a8;
  border-radius:0 5px 5px 0;
- height:55px; 
+ height:53px; 
  width:15px;
- margin:23px 0 0 40px;
+ margin:20px 0 0 35px;
  Z-index:45;  
 }
 
@@ -144,9 +146,9 @@ h2{
  border-style:  outset;
  border-color:#1066a8;
  border-radius:5px 0px 0px 0;
- height:25px; 
- width:25px;
- margin:-80px 50px 0px -20px;
+ height:22px; 
+ width:22px;
+ margin:-102px 80px 0px 7px;
  z-index:1; 
 }
 
@@ -155,9 +157,9 @@ h2{
  border-style:  outset;
  border-color:#1066a8;
  border-radius:0px 6px 0px 0px;
- height:25px; 
- width:25px;
- margin:-108px 30px 0px -5px;
+ height:22px; 
+ width:22px;
+ margin:-99px 30px 0px 3px;
  z-index:1; 
 }
 .policeCall{
@@ -170,7 +172,7 @@ h2{
     width:340px;
     position:relative;
     left:110px;
-    top:90px;
+    top:-70px;
     z-index:10;
 }
 .call{
@@ -192,7 +194,8 @@ h2{
 }
 
 small{
-    font-size: 8px;
+    font-size: 12px;
+    text-align: center;
 }
 
 .wrapper {
@@ -214,15 +217,15 @@ small{
 		grid-row: 1;
     height: 20px;
     text-align: center;
-    line-height: 0.4;
-    padding-left: 45px;
+    line-height: 9px;
+    padding-left: 40px;
 	}
 
 	.boxes {
 		grid-column: 3 ;
 		grid-row: 1 / 3;
     text-align: center;
-    padding-top: 5px;
+    padding-top: 3px;
     padding-left: 80px;
        
 	}
@@ -231,7 +234,7 @@ small{
 	    grid-column: 1 ;
 	    grid-row: 1/3 ;
       text-align: center;
-      padding-top: 5px;
+      padding-top: 3px;
       padding-left: 45px;
     
 	}
@@ -242,6 +245,7 @@ small{
       text-align: center;
       line-height: 0.2;
       padding-left: 45px;
+      padding-bottom: 5px;
 
 	}
 
@@ -254,9 +258,9 @@ small{
   border-width: 5px;
   border-radius:6px 0 0 0;
   position:relative;
-  left:1px;
-  top:10px;
-  height:800px;
+  left:40px;
+  top:-150px;
+  height:640px;
   width:40px;
   z-index:5px;
 }
@@ -290,7 +294,7 @@ small{
   border-color:white;
   border-width: 3px;
   margin:30px 8px 8px 25px;
-  padding: 5px;
+  padding: 2px;
   width:85px;
   height:100px; 
 }
@@ -303,8 +307,8 @@ small{
   float: left;
   margin:2px 2px 2px 3px;
   padding:1px ;
-  width:18px;
-  height:40px;   
+  width:20px;
+  height:41px;   
 }
 .pane2{
   background-color:Grey;
@@ -315,7 +319,7 @@ small{
   float: left;
   margin:2px 2px 2px 3px;
   padding:1px ;
-  width:18px;
+  width:20px;
   height:40px;     
 }
 
@@ -390,7 +394,7 @@ small{
   border-color:white;
   border-width: 3px;
   margin:30px 8px 8px 25px;
-  padding: 5px;
+  padding: 2px;
   width:85px;
   height:100px; 
   
@@ -405,9 +409,9 @@ small{
   border-width: 5px;
   border-radius:0 6px 0 0;
   position: relative;
-  top:-770px;
+  top:-790px;
   left: 378px;
-  height:600px;
+  height:640px;
   width:40px;
 
 }
@@ -420,10 +424,10 @@ small{
   border-width: 5px;
   border-radius:6px 6px 0 0;
   position: relative;
-  top:85px;
-  left: 25px;
+  top:-792px;
+  left: 15px;
   height:35px;
-  width:530px;
+  width:427px;
 
 }
 
